# libllcp

./: .gitignore  AUTHORS  CMakeLists.txt  HACKING  Makefile.am  configure.ac
cmake/: config_windows.h.cmake
contrib/: windows.h
contrib/win32/: stdlib.c
contrib/win32/libllcp/: socketpair.c
examples/: CMakeLists.txt  Makefile.am
examples/npp-client/: CMakeLists.txt  Makefile.am  npp-client.c
examples/npp-server/: CMakeLists.txt  Makefile.am  npp-server.c
examples/snep-client/: CMakeLists.txt  Makefile.am  snep-client.c
examples/snep-server/: CMakeLists.txt  Makefile.am  snep-server.c
libllcp/: CMakeLists.txt  Makefile.am  llc_connection.c  llc_connection.h  llc_link.c  llc_link.h  llc_service.c  llc_service.h  llc_service_llc.c  llc_service_llc.h  llc_service_sdp.c  llc_service_sdp.h  llcp.c  llcp.h  llcp_log.c  llcp_log.h  llcp_parameters.c  llcp_pdu.c  llcp_pdu.h  mac.h  mac_iso18092.c
libnfc-llcp/: llc_connection.c  llc_connection.h  llc_link.c  llc_link.h  llc_service.c  llc_service.h  llc_service_llc.c  llc_service_sdp.c  llcp.c  llcp.h  llcp_log.c  llcp_log.h  llcp_parameters.c  llcp_parameters.h  llcp_pdu.c  llcp_pdu.h  mac.h  mac_iso18092.c
test/: Makefile.am  test_dummy_mac_link.c  test_llc_connection.c  test_llc_link.c  test_llc_service.c  test_llcp_parameters.c  test_llcp_pdu.c  test_mac_link.c
tools/llcp-pdu-explain/: Makefile.am  llcp-pdu-explain.c
tools/llcp-test-client/: Makefile.am  llcp_test_client.c
tools/llcp-test-server/: Makefile.am  README  connected-echo-server.c  connected-echo-server.h  connectionless-echo-server.c  connectionless-echo-server.h  llcp-test-server.c
